added image, edits to HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Developer Diane: Résumé</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h1>Developer Diane: Résumé</h1>
+            <address>
+                <p>website: developerdiane.com</p>
+                <p>email: diane@developerdiane.com</p>
+            </address>
+            <img src="developer-diane.jpg" alt="A picture of Developer Diane. Image courtesy of Unsplash.">
+        </header>
+    </main>
+    <section>
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <p><strong><a href="https://teamtreehouse.com">Treehouse</a></strong></p>
+                <p>Front End Web Development Techdegree</p>
+                <p>Graduated January 2020</p>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
