update alt description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <p>website: developerdiane.com</p>
                 <p>email: diane@developerdiane.com</p>
             </address>
-            <img src="developer-diane.jpg" alt="A picture of Developer Diane. Image courtesy of Unsplash.">
+            <img src="developer-diane.jpg" alt="Developer Diane coding on her laptop. Image courtesy of Unsplash.">
         </header>
     </main>
     <section>
