--- a/index.html
+++ b/index.html
@@ -13,44 +13,45 @@
                 <p>website: developerdiane.com</p>
                 <p>email: diane@developerdiane.com</p>
             </address>
-            <img src="developer-diane.jpg" alt="Developer Diane coding on her laptop. Image courtesy of Unsplash.">
+            <img src="developer-diane.jpg" alt="Developer Diane coding on her laptop.">
         </header>
+        <section>
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <h3><a href="https://teamtreehouse.com">Treehouse</a></h3>
+                    <p>Front End Web Development Techdegree</p>
+                    <p>Graduated January 2020</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Experience</h2>
+            <ul>
+                <li>
+                    <h3>Super Web Design Shop</h3>
+                    <p>Junior Developer</p>
+                    <p>February 2020-present</p>
+                </li>
+                <li>
+                    <h3>Pretty Good Websites, Inc.</h3>
+                    <p>Web Development Intern</p>
+                    <p>July 2019-January 2020</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>Git</li>
+                <li>Bootstrap</li>
+                <li>Mobile Web Development</li>
+            </ul>
+        </section>
+        <footer>©2020 Developer Diane.</footer>
     </main>
-    <section>
-        <h2>Education</h2>
-        <ul>
-            <li>
-                <h3><a href="https://teamtreehouse.com">Treehouse</a></h3>
-                <p>Front End Web Development Techdegree</p>
-                <p>Graduated January 2020</p>
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Experience</h2>
-        <ul>
-            <li>
-                <h3>Super Web Design Shop</h3>
-                <p>Junior Developer</p>
-                <p>February 2020-present</p>
-            </li>
-            <li>
-                <h3>Pretty Good Websites, Inc.</h3>
-                <p>Web Development Intern</p>
-                <p>July 2019-January 2020</p>
-            </li>
-        </ul>
-    </section>
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>Git</li>
-            <li>Bootstrap</li>
-            <li>Mobile Web Development</li>
-        </ul>
-    </section>
 </body>
 </html>
