--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </address>
             <img src="developer-diane.jpg" alt="Developer Diane coding on her laptop.">
         </header>
-        <section>
+        <section id="education">
             <h2>Education</h2>
             <ul>
                 <li>
@@ -25,7 +25,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="experience">
             <h2>Experience</h2>
             <ul>
                 <li>
@@ -40,7 +40,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="skills">
             <h2>Skills</h2>
             <ul>
                 <li>HTML</li>
